fixed z-index

--- a/src/Emulator/Instructions/Instructions.css
+++ b/src/Emulator/Instructions/Instructions.css
@@ -1,5 +1,5 @@
 .instructions-background {
-  margin-left: 2vw;
+  margin-left: 4vw;
   margin-top: 2vh;
   z-index: -2;
 }
